@@ -19,9 +19,6 @@
    Foundation, Inc., 59 Temple Place - Suite 330,
    Boston, MA 02111-1307, USA.  */
 
-#include <string.h>
-#include <sys/stat.h>
-
 #include "defs.h"
 #include "inferior.h"
 #include "value.h"
@@ -34,6 +31,9 @@
 #include "command.h"
 #include "ui-out.h"
 #include "top.h"
+
+#include "gdb_string.h"
+#include <sys/stat.h>
 
 static void env_cli_command (const char *cli, char *args);
 static void env_mod_path (char *dirname, char **which_path);
