@@ -1,3 +1,13 @@
+2003-01-09  Andrew Cagney  <ac131313@redhat.com>
+
+	* infrun.c (follow_fork): Use ISO C definition.
+	* expprint.c (print_subexp): Use xfree instead of free.
+	* charset.c: Include "gdb_string.h" instead of <string.h>.
+	(register_iconv_charsets): Use ISO C definition.
+	(host_charset, target_charset): Ditto.
+	* Makefile.in (charset.o): Update dependencies.
+	(mi-cmd-env.o): Update dependencies.
+
 2003-01-08  Andrew Cagney  <cagney@redhat.com>
 
 	* alpha-linux-tdep.c (alpha_linux_sigcontext_addr): Use
